# git-bars

./: .gitignore  README.md  mise.local.toml  pyproject.toml
git_bars/: __main__.py  gitbars.py
